# nemo

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  build.ps1  run.txt
data/: stock_data.csv
include/: data_loader.h  logging.h
include/algo/: simple_moving_average.h  trading_algo.h
include/core/: engine.h  event_bus.h  events.h  sim_clock.h
include/data/: tick_data_store.h
include/execution/: cost_model.h  execution_handler.h  order_book.h  order_router.h
include/metrics/: backtester.h
include/python/: bindings.h
include/strategy/: risk_manager.h  simple_sma_broad.h  strategy_base.h
include/utils/: config.h  logging.h  types.h
logs/: blank.txt
src/: data_loader.cpp  main.cpp
src/algo/: simple_moving_average.cpp
src/core/: engine.cpp  event_bus.cpp  sim_clock.cpp
src/data/: data_loader.cpp  tick_data_store.cpp
src/execution/: cost_model.cpp  execution_handler.cpp  order_book.cpp  order_router.cpp
src/logger/: logger.cpp
src/metrics/: backtester.cpp
src/python/: bindings.cpp
src/strategy/: risk_manager.cpp  simple_sma_broad.cpp  strategy_base.cpp  strategy_base_impl.cpp
src/utils/: config.cpp
strategies/python/: sma_strategy.py
